# ReMapRenderer

./: CMakeLists.txt  MAKEFILE.WIN  MapRenderer.dev  MapRenderer.layout  README.TXT  README.md  Ultima_Iris_2D_private.h  Ultima_Iris_2D_private.rc  config.xml
_winlibs/: notes.txt
include/: Buffer.h  Cache.h  Config.h  Debug.h  Game.h  Geometry.h  SDLEvent.h  include.h  uotype.h  xml.h
include/loaders/: AnimLoader.h  ArtLoader.h  FontLoader.h  GroundTextures.h  GumpLoader.h  HueLoader.h  LocalMapPatches.h  Map.h  MapPatches.h  SkillLoader.h  StaticModel.h  StaticTextures.h  Statics.h  TileDataLoader.h  UOMap.h  VerdataLoader.h
include/renderer/: AnimBuffer.h  Animation.h  Camera.h  Characters.h  DynamicObjects.h  Fade.h  MapBlock.h  MapBuffer.h  Node.h  Renderer.h  SDLScreen.h  StaticObjects.h  Texture.h  TextureBuffer.h  World.h
libs/SDL/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_main.h  SDL_mixer.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_quit.h  SDL_rwops.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h
resources/: MapRenderer.rc
src/: Buffer.cpp  Config.cpp  Debug.cpp  Game.cpp  Geometry.cpp  Makefile  Makefile.am  Makefile.in  MapRenderer.cpp  SDLEvent.cpp  xml.cpp
src/loaders/: AnimLoader.cpp  ArtLoader.cpp  FontLoader.cpp  GroundTextures.cpp  GumpLoader.cpp  HueLoader.cpp  LocalMapPatches.cpp  SkillLoader.cpp  StaticModel.cpp  StaticTextures.cpp  Statics.cpp  TileDataLoader.cpp  UOMap.cpp  VerdataLoader.cpp
src/renderer/: AnimBuffer.cpp  Animation.cpp  Camera.cpp  Characters.cpp  DynamicObjects.cpp  Fade.cpp  MapBlock.cpp  MapBuffer.cpp  Node.cpp  Renderer.cpp  SDLScreen.cpp  StaticObjects.cpp  Texture.cpp  TextureBuffer.cpp
